attempting to fix a ui bug on mobile

--- a/frontend/CSS/main.css
+++ b/frontend/CSS/main.css
@@ -139,6 +139,13 @@ label{
     flex-direction: column;
     justify-content: center;
 }
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 .btnGroup{
     padding: 14px;
     height: fit-content;
